[tool.poetry]
name = "django-spicy-id"
version = "1.0.0"
description = ""
authors = ["mike wakerly <opensource@hoho.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
tox = "^4.17.1"
setuptools = "^72.1.0"
pytest-django = "^4.8.0"
sphinx = "^8.0.2"
twine = "^5.1.1"
ruff = "^0.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = 'py312'
exclude = [
  ".git",
  "node_modules",
  ".pyenv",
  ".vscode",
  ".tox"
]