[metadata]
name = django-spicy-id
version = 0.2.1
description = Fancy ID fields for django models.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mik3y/django-spicy-id
author = mik3y
author_email = opensource@hoho.com
license = MIT
license_file = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
keywords = django timeseries
platforms =
    any

[options]
packages = find:
package_dir = =src
install_requires =
    Django>=2.2
python_requires = >=3.8.1

[options.packages.find]
where = src

[coverage:paths]
source =
   src
   .tox/*/site-packages

[coverage:run]
branch = True
include = */django_spicy_id/*
parallel = True

[coverage:report]
show_missing = True

[flake8]
exclude =
    .tox,
    .git,
    __pycache__,
    build,
    dist
ignore = W503,W504
max_line_length = 99

[isort]
combine_as_imports = True
default_section = THIRDPARTY
force_grid_wrap = 0
include_trailing_comma = True
known_third_party = Django
known_first_party = django_spicy_id
line_length = 99
multi_line_output = 3
skip = .tox,venv
use_parentheses = True
