[metadata]
name = django-spicy-id
version = 1.0.0
description = Fancy ID fields for django models.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mik3y/django-spicy-id
author = mik3y
author_email = opensource@hoho.com
license = MIT
license_file = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only
keywords = django timeseries
platforms =
    any

[options]
packages = find:
package_dir = =src
install_requires =
    Django>=2.2
python_requires = >=3.9.0

[options.packages.find]
where = src

[coverage:paths]
source =
   src
   .tox/*/site-packages

[coverage:run]
branch = True
include = */django_spicy_id/*
parallel = True

[coverage:report]
show_missing = True
